force-app/main/default/objects/Case_Priority_Rule__mdt/Case_Priority_Rule__mdt.object-meta.xml
<CustomObject>
    <description
    >Synthetic rules mapping service category and member tier to case priority and SLA hours. Lowest Rule Order wins.</description>
    <label>Case Priority Rule</label>
    <pluralLabel>Case Priority Rules</pluralLabel>
</CustomObject>