force-app/main/default/objects/Case_Priority_Rule__mdt/fields/Member_Tier__c.field-meta.xml
<CustomField>
    <fullName>Member_Tier__c</fullName>
    <description>Account member tier, or * for any.</description>
    <label>Member Tier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>