force-app/main/default/objects/Case_Priority_Rule__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Case priority to assign (High, Medium, Low).</description>
    <label>Priority</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>