force-app/main/default/objects/Case_Priority_Rule__mdt/fields/Rule_Order__c.field-meta.xml
<CustomField>
    <fullName>Rule_Order__c</fullName>
    <description>Evaluation order. The first matching rule wins.</description>
    <label>Rule Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>