force-app/main/default/objects/Case_Priority_Rule__mdt/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <description>Case service category, or * for any.</description>
    <label>Service Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>