force-app/main/default/objects/Case_Priority_Rule__mdt/fields/SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Hours__c</fullName>
    <description>Hours from case creation until the SLA is due.</description>
    <label>SLA Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>